# TechTap

./: LICENSE  README.md  __init__.py  cli.py  config.json  pyproject.toml  requirements.txt  rfid_reader.py  setup.ps1  setup.sh  utils.py
arduino/: techtap_reader.ino
techtap/: __init__.py  __main__.py  cli.py  database.py  ndef_encoder.py  phone_nfc.py  rfid_reader.py  utils.py
techtap/arduino/: techtap_reader.ino
techtap/static/: phone_nfc.html
